--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,6 +9,8 @@ sites:
     url: https://app.igere.ch
   - name: Strapi
     url: https://strapi.igere.ch
+  - name: Test Error
+    url: https://error.igere.ch
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
