--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,7 +10,7 @@ sites:
   - name: Strapi
     url: https://strapi.igere.ch
   - name: Test Error
-    url: https://error.igere.ch
+    url: https://errors.igere.ch
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
