--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,8 +9,8 @@ sites:
     url: https://app.igere.ch
   - name: Strapi
     url: https://strapi.igere.ch
-  - name: Test Error
-    url: https://errors.igere.ch
+  - name: Test Error V2
+    url: https://error.v2.igere.ch
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
